--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
   </head>
   <body>
     <h1>Lyrics</h1>
+
+    <p class="warning">
+      Curated list of songs I sing when getting drunk with friends.
+    </p>
 
     <h3>Main Direction</h3>
 
